Add guide start api
